Implement AtlantaFX redesign with side navigation (#21)
  - Apply PrimerLight AtlantaFX
  - Replace tab bar with collapsible side navigation rail (Billing, Licensing)
  - Add workflow step sub-nav under Billing (Service Info through Summary)
  - Remove Previous button — sidebar handles backwards navigation
  - Extract buildBillingPane, buildSidebar, buildStepNav, buildNavActions
  - Add X-Tenant-Id header support to ApiConfig for dev tenant wiring
  - Rebrand jpackage app name and vendor to Eternatel                                                                                                  - CSS: sidebar, nav-btn, step-btn, separator, accent color overrides